Fixed issue 4: 2.1.0 button text on mobile

--- a/src/v2.1.0/css/components/buttons.scss
+++ b/src/v2.1.0/css/components/buttons.scss
@@ -110,7 +110,7 @@ $breakpoints: (
             
             width: 90%;
             margin: auto;
-            font-size: 1em;
+            font-size: 1.4em;
             font-family: inherit;
             font-weight: inherit;
             @include thisco-button();
